--- a/view/addExpense.html
+++ b/view/addExpense.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Expences</title>
-    <link href="../public/login.css" rel="stylesheet">
+    <link href="login.css" rel="stylesheet">
 </head>
 <body>
     <main> 
