--- a/view/login.html
+++ b/view/login.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../public/login.css" rel="stylesheet">
+    <link href="login.css" rel="stylesheet">
 </head>
 <body>
 
@@ -23,7 +24,7 @@
        <button  onclick="forgotpassword()" class="btn1" type="submit">Forgot password</button>
         <p>New user Sign Up first</p>
         <p><a href="signin.html">Sign Up</a></p>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
         <script src="login.js"></script>  
 </body>
 </html>
