--- a/view/signin.html
+++ b/view/signin.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="../public/login.css" rel="stylesheet">
+  <link href="login.css" rel="stylesheet">
 </head>
 <body>
   <main> 
@@ -28,7 +28,7 @@
   </main>
       <p>Already Sign UP</p>
      <p><a href="login.html">login</a></p>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="signin.js"> </script>
 </body>
 </html>
