front end ready

--- a/view/signin.html
+++ b/view/signin.html
@@ -28,7 +28,7 @@
   </main>
       <p>Already Sign UP</p>
      <p><a href="login.html">login</a></p>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js" ></script>
   <script src="signin.js"> </script>
 </body>
 </html>
