--- a/view/index.html
+++ b/view/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -28,7 +28,7 @@
   </main>
       <p>Already Sign UP</p>
      <p><a href="login.html">login</a></p>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js" ></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
   <script src="signin.js"> </script>
 </body>
 </html>
