--- a/view/login.html
+++ b/view/login.html
@@ -23,7 +23,7 @@
         </form>
        <button  onclick="forgotpassword()" class="btn1" type="submit">Forgot password</button>
         <p>New user Sign Up first</p>
-        <p><a href="signin.html">Sign Up</a></p>
+        <p><a href="index.html">Sign Up</a></p>
          <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
         <script src="login.js"></script>  
 </body>
