--- a/view/addExpense.html
+++ b/view/addExpense.html
@@ -53,8 +53,12 @@
         <div id="add"></div>
          <div  id="sub"></div>
          <div id="pagination"></div>
+        </div>
+        <ul id='listOfExpenses'></ul>
+    </div>
+         <div id="listurl-div" class="dark">
          <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
          <script src="addExpense.js"></script>
   </body>
   </html>
